--- a/FRONT/static/css/admin-styles.css
+++ b/FRONT/static/css/admin-styles.css
@@ -183,3 +183,38 @@ h2 {
     font-size: 0.9em;
     margin-bottom: 5px;
 }
+
+.aviso {
+    display: none; 
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+
+.aviso-mensaje {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+    width: 300px;
+}
+
+button {
+    background-color: #9a4d9b;
+    color: white;
+    border: none;
+    padding: 8px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #7a2f7e;
+}
