--- a/FRONT/templates/usuarios-base.html
+++ b/FRONT/templates/usuarios-base.html
@@ -8,7 +8,6 @@
     <link rel="icon" href="/static/img/logo-br.png" type="image/x-icon">
 </head>
 <body>
-
     <header>
         <div class="contenedor-header">
             <a href="{{ url_for('index') }}"> <img src="/static/img/logo-br.png" alt="Logo" class="logo"> </a>
@@ -16,10 +15,17 @@
                 <input type="text" placeholder="Buscar" class="barra-busqueda" name="fname">
             </form>
             <a class="boton-reservar" href="{{url_for('reserva')}}">Consulta tu reserva</a>
-            <a class="boton-cerrar-sesion" href="{{ url_for('logout') }}">Cerrar sesión</a>
-            <img src="/static/img/icon-user.jpg" alt="admin"class="icono_user"></a>
+            
+            <div class="menu-admin">
+                <img src="/static/img/icon-user.jpg" alt="admin" class="icono">
+                <div class="menu-desplegable">
+                    <a class="boton-cerrar-sesion" href="{{ url_for('logout') }}">Cerrar sesión</a>
+                </div>
+            </div>
         </div>
     </header>
+    <script src="{{ url_for('static', filename='js/icono.js') }}"></script>
+
     <main>
         {% block content %}{% endblock %}
     </main>
