--- a/FRONT/static/css/admin-styles.css
+++ b/FRONT/static/css/admin-styles.css
@@ -81,7 +81,7 @@ header {
     background-color: #ae55af;
 }
 
-.icono_admin {
+.icono {
     width: 35px;
     height: 35px;
     border-radius: 20px;
@@ -89,7 +89,7 @@ header {
     transition: transform 0.3s ease;
 }
 
-.icono_admin:hover {
+.icono:hover {
     transform: scale(1.1);
 }
 
@@ -217,4 +217,40 @@ button {
 
 button:hover {
     background-color: #7a2f7e;
+}
+
+.menu-admin {
+    position: relative;
+    display: inline-block;
+}
+
+.menu-desplegable {
+    display: none;
+    position: absolute;
+    top: 100%;
+    right: 0;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 10px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    z-index: 10;
+}
+
+.menu-admin .menu-desplegable a {
+    text-decoration: none;
+    color: #000;
+    display: block;
+    margin: 5px 0;
+}
+
+.menu-admin .menu-desplegable a:hover {
+    color: #fff;
+    background-color: rgb(113, 34, 187);
+    border-radius: 3px;
+    padding: 5px;
+}
+
+.menu-admin.active .menu-desplegable {
+    display: block;
 }
