--- a/FRONT/static/css/users-styles.css
+++ b/FRONT/static/css/users-styles.css
@@ -68,7 +68,7 @@ header {
     background-color: #ae55af;
 }
 
-.icono_user {
+.icono {
     width: 35px;
     height: 35px;
     border-radius: 20px;
@@ -76,7 +76,7 @@ header {
     transition: transform 0.3s ease;
 }
 
-.icono_user:hover {
+.icono:hover {
     transform: scale(1.1);
 }
 
@@ -218,4 +218,41 @@ button {
 
 button:hover {
     background-color: #7a2f7e;
+}
+
+
+.menu-admin {
+    position: relative;
+    display: inline-block;
+}
+
+.menu-desplegable {
+    display: none;
+    position: absolute;
+    top: 100%;
+    right: 0;
+    background-color: #fff;
+    border: 1px solid #8b8b8b;
+    border-radius: 5px;
+    padding: 10px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    z-index: 10;
+}
+
+.menu-admin .menu-desplegable a {
+    text-decoration: none;
+    color: #000;
+    display: block;
+    margin: 5px 0;
+}
+
+.menu-admin .menu-desplegable a:hover {
+    color: #fff;
+    background-color: rgb(113, 34, 187);
+    border-radius: 3px;
+    padding: 5px;
+}
+
+.menu-admin.active .menu-desplegable {
+    display: block;
 }
