--- a/FRONT/static/css/styles.css
+++ b/FRONT/static/css/styles.css
@@ -216,3 +216,39 @@ h2 {
     font-size: 0.9em;
     margin-bottom: 5px;
 }
+
+@media (max-width: 768px) {
+    .contenedor-header {
+        flex-direction: column;
+        gap: 15px;
+    }
+
+    .barra-busqueda {
+        width: 85%;
+    }
+
+    .boton-login {
+        width: 60%;
+        text-align: center;
+    }
+
+    .footer {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .contactos {
+        gap: 10px;
+    }
+
+    .logo svg {
+        position: center;
+        width: 40px;
+        height: 40px;
+    }
+
+    .creadores p {
+        font-size: 12px;
+    }
+}
+
