--- a/FRONT/static/css/admin-styles.css
+++ b/FRONT/static/css/admin-styles.css
@@ -200,6 +200,7 @@ h2 {
 
 .aviso-mensaje {
     background-color: #fff;
+    color:black;
     padding: 20px;
     border-radius: 8px;
     text-align: center;
